--- a/src/page/home/home.scss
+++ b/src/page/home/home.scss
@@ -8,6 +8,12 @@
       background: rgb(223, 221, 221);
       display: flex;
       align-items: center;
+      .hideSideBarIcon{
+        font-size: 25px;
+        font-weight: 550;
+        width: 90px;
+        padding: 20px;
+      }
     }
     .home-content-wrapper{
         
