--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,21 @@
   text-align: center;
   box-sizing: border-box;
 }
+::-webkit-scrollbar {
+  width: 10px;
+  /* background: #282c34; */
+}
+::-webkit-scrollbar-thumb {
+  /* background: #ff9601; */
+  border-radius: 6.4px;
+}
 ul,li,p{
   padding: 0;
   margin: 0;
 }
-
+body{
+  box-sizing: border-box !important;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
