--- a/src/page/home/components/bill/bill.scss
+++ b/src/page/home/components/bill/bill.scss
@@ -121,3 +121,15 @@
     }
   }
 }
+//smart
+@media screen and (max-width:767px) {
+  
+}
+//tablet
+@media screen and (min-width:767px) and (max-width:1023px) {
+  
+}
+//pc
+@media screen and (min-width:1024px)  {
+  
+}
