--- a/src/page/home/home.scss
+++ b/src/page/home/home.scss
@@ -4,15 +4,26 @@
     min-height: 100vh;
     width: 100%;
     .navigation{
-      height: 90px;
-      background: rgb(223, 221, 221);
+      color: #fff;
+      height: 40px;
+      background: rgb(5, 5, 5);
       display: flex;
       align-items: center;
       .hideSideBarIcon{
-        font-size: 25px;
+        cursor: pointer;
+        font-size: 16px;
         font-weight: 550;
-        width: 90px;
-        padding: 20px;
+        padding: 9px 20px;
+        transition: all 0.1s linear;
+      }
+      .hideSideBarIcon:hover{
+        font-size: 20px;
+      }
+      .total-coin-title{
+       margin-left: 12px;
+      }
+      strong{
+        margin: 0 5px;
       }
     }
     .home-content-wrapper{
