--- a/src/page/login/login.scss
+++ b/src/page/login/login.scss
@@ -31,6 +31,12 @@
           cursor: pointer;
           top: 50%;
         }
+        .warning-text{
+          position: absolute;
+          bottom:-30px;
+          left: 0;
+          margin: 0;
+        }
       }
     }
     .navigate-title {
