--- a/src/page/home/components/bill/bill.scss
+++ b/src/page/home/components/bill/bill.scss
@@ -15,27 +15,37 @@
       font-family: Arial, Helvetica, sans-serif;
     }
     .form-bill-container {
-      min-height: 220px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
       position: relative;
       .input-group {
-        height: 50px;
+        height: 100px;
+        width: 400px;
+        background: #e2e0e0;
+        margin: 10px 0;
         display: flex;
         align-items: center;
-        label {
-          font-size: 18px;
-          font-weight: 500;
-          text-transform: capitalize;
-          width: 150px;
+        .inputblock{
+          display: flex;
+          flex-direction: column;
+          label {
+            font-size: 18px;
+            font-weight: 500;
+            text-transform: capitalize;
+            width: 150px;
+          }
+          .inputvalue {
+            
+            height: 35px;
+            width: 300px;
+            padding: 0 12px;
+            outline: none;
+            border-radius: 6.4px !important;
+            border: 1px solid rgb(134, 133, 133);
+          }
         }
-        .inputvalue {
-          margin: 0 12px;
-          height: 35px;
-          width: 300px;
-          padding: 0 12px;
-          outline: none;
-          border-radius: 6.4px !important;
-          border: 1px solid rgb(134, 133, 133);
-        }
+
         .inputvalue:focus {
           border: 2px solid pink;
         }
@@ -52,7 +62,7 @@
       .button-add-bill {
         position: absolute;
         margin-top: 20px;
-        bottom: 0;
+        bottom: -50px;
         width: 90px;
         height: 45px;
         display: flex;
